--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-
 </head>
 <body>
 <canvas id="canvas" width="800" height="450" style="border: solid red"></canvas>
-<script src="BG.js"></script>
 <script src="Pipe.js"></script>
 <script src="Bird.js"></script>
+<script src="Main.js"></script>
 </body>
 </html>
