--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="BG.css">
 </head>
 <body>
-<canvas id="canvas" width="800" height="450" style="border: solid red"></canvas>
+<div class="BG">
+    <canvas id="canvas" width="800" height="450" style="border: solid red"></canvas>
+</div>
 <script src="Pipe.js"></script>
 <script src="Bird.js"></script>
 <script src="Main.js"></script>
