--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <div class="BG">
     <canvas id="canvas" width="800" height="450" style="border: solid red"></canvas>
 </div>
+<h1 id="score" style="margin-left: 300px"></h1>
 <script src="Pipe.js"></script>
 <script src="Bird.js"></script>
 <script src="Main.js"></script>
