--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="BG.css">
+
 </head>
 <body>
 <div class="BG">
     <canvas id="canvas" width="1280" height="768" style="border: solid red"></canvas>
 </div>
 <h1 id="score" style="margin-left: 300px"></h1>
+<script src="Meteor.js"></script>
 <script src="Pipe.js"></script>
 <script src="Bird.js"></script>
 <script src="Main.js"></script>
