--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
     <link rel="stylesheet" href="BG.css">
 
+
 </head>
 <body>
 <div class="BG">
@@ -14,6 +15,8 @@
 <script src="Meteor.js"></script>
 <script src="Pipe.js"></script>
 <script src="Bird.js"></script>
+<script src="Bullet.js"></script>
 <script src="Main.js"></script>
+
 </body>
 </html>
