--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="BG.css">
 
 
+
 </head>
 <body>
 <div class="BG">
@@ -15,6 +16,7 @@
 <script src="Meteor.js"></script>
 <script src="Pipe.js"></script>
 <script src="Bird.js"></script>
+<script src="Mob.js"></script>
 <script src="Bullet.js"></script>
 <script src="Main.js"></script>
 
